# MisEventos

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  init-db.sh
Backend/: README.md
Backend/miseventos/: Dockerfile  README.md  alembic.ini  pyproject.toml
Backend/miseventos/alembic/: env.py  script.py.mako
Backend/miseventos/alembic/versions/: 467e21bac955_initial_migration.py
Backend/miseventos/app/: dependencies.py  main.py
Backend/miseventos/app/core/: config.py  db.py  security.py
Backend/miseventos/app/models/: __init__.py  attendance.py  base.py  event.py  session.py  user.py
Backend/miseventos/app/routers/: auth.py  events.py  registrations.py  users.py
Backend/miseventos/app/schemas/: __init__.py  attendance_schemas.py  auth_schemas.py  event_schemas.py  session_schemas.py  token_schemas.py  user_schemas.py
Backend/miseventos/app/services/: auth_service.py  event_service.py  registration_service.py  session_service.py
Backend/miseventos/app/tests/: conftest.py
Backend/miseventos/app/tests/test_routers/: test_events_router.py
Backend/miseventos/app/tests/test_services/: test_auth_service.py
Backend/miseventos/app/utils/: enums.py
Frontend/miseventos/: Dockerfile  package.json
Frontend/miseventos/src/: App.jsx  index.js
Frontend/miseventos/src/containers/: AuthContainer.jsx  CreateEventContainer.jsx  EventDetailContainer.jsx  EventsListContainer.jsx  ProfileContainer.jsx
Frontend/miseventos/src/services/: api.js  apiService.js  assistance.service.js  auth.service.js  events.service.js  sessions.service.js  (+1 more)
(+20 files in other folders)
